edits to group project requirements

--- a/ENGR114-Project/ENGR114_Project_Requirements-2019Q4.ipynb
+++ b/ENGR114-Project/ENGR114_Project_Requirements-2019Q4.ipynb
@@ -18,57 +18,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Engineering Lab in AM103 has a set of computers with MATLAB installed and\n",
-    "is a great place for students to go when working on homework, projects or studying. In the \n",
-    "Engineering Lab there is also a hydroponic garden / fish tank installation. The fish produce \n",
-    "nutrients for the plants and the plants clean the water for the fish. Water from the fish tank is \n",
-    "pumped up to the plants. The plants and soil filter the water before it flows back down; clean and \n",
-    "oxygenated into the tank. For this cycle to continue working, the fish tank needs a pump to move \n",
-    "the water and the plants need a grow light for photosynthesis. Both of these are currently plugged \n",
-    "into the wall and need to be turned on manually by a lab technician. A great system for fish and \n",
-    "plants, but what a pain for the lab technician. And who is going to turn on the pump and grow light during weekends and breaks?"
+    "The Engineers solve the world's problems in teams. Often teams of Engineers include different types of Engineers working together. In this team project, you will be part of a group that solves an engineering problem with programming. Your project needs to including some sort of hardare (although there are a couple of exceptions) and some component of software. The hardware could be a sensor like a temperature, light, pressure, pH, turbidity, etc. Or the hardware could be an \"output\" like a motor, a servo, a light, a valve, a screen, etc.\n",
+    "\n",
+    "You can browse previous Group's Projects on GitHub.com at [https://github.com/ProfessorKazarinoff](https://github.com/ProfessorKazarinoff) Previous project have included:\n",
+    "\n",
+    " * A set of motorized gates that release cars down a ramp\n",
+    " * A photograte timer that calculated the speed of toy cars\n",
+    " * A pH meter that sent pH measurements up to a cloud server\n",
+    " * A thermometer that recorded the temperature of a cup of coffee to a phone\n",
+    " * A turbidity sensor that recorded the \"cloudiness\" of fish tank water\n",
+    " * A light sensor and light switch that turned on lights when sunlight is detected\n",
+    " * A motion sensor and light switch that turned on lights when motion was detected\n",
+    " * A motion sensor and timer that timed a parachute drop\n",
+    " * An actuator that released a parachute after a countdown\n",
+    "\n",
+    "Think of a community or class problem that needs to be solved with hardware and computer programming. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Hydroponic Garden and Fishtank](images/image1.jpg)"
+    "## Circuit Python / Arduino / IoT Project"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wouldn’t it be better if the system was smart and automated? Wouldn’t it be better if the the pump\n",
-    "only turned on when it was needed and the light automatically turned on during daylight hours? One way to accomplish this is with programming!\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to make an automated system that can be monitored remotely, a couple of pieces of hardware\n",
-    "is needed. One type of hardware needed are sensors. Sensors that can measure the temperature, pH \n",
-    "and water depth in the fish tank could help determine when the pump needs to be turned on. A sensor \n",
-    "that can measure light level could help determine when to turn on the grow light. The \n",
-    "light and the pump need some additional hardware too. Both of these need to be connected to relays \n",
-    "so that a small signal current can control the high current light and pump. These sensors and \n",
-    "relays need to be connected to microcontrollers so that they con be integrated with a computer."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Arduio IoT / MicroPython Project"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this group project, your group will use Python to interact an Arduino (or use MicroPython on a different microcontroller) to dynamically collect sensor data or control a relay and post the data or relay state on ThingSpeak (an IoT cloud server). Each group will be tasked with reading or controlling one of the following: Light Sensor, pH Sensor, Fish Feeder motor, Light Relay or Pump Relay."
+    "For this group project, your group will use Python to interact with hardware. This hardware could be an Arduino or a Circuit Python or MicroPython based microcontroller. Your team will dynamically collect sensor data or control a relay, motor, or actuator."
    ]
   },
   {
@@ -82,11 +60,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. The sensor, relay or motor needs to be mounted on or near the fish tank in order to record data or flip a switch\n",
-    "2. An Arduino or a microcontroller with MicroPython connected to the sensor or relay either directly or through some other hardware on a breadboard will record the raw voltage value coming from the sensor and sent it to a laptop\n",
-    "3. A laptop with Python installed, connected to the Arduino or microcontroller with a USB cable, will read in the sensor data and process it so that it can be sent to an IoT (Internet of Things) server.\n",
+    "1. The sensor, relay, actuator or motor needs to be mechanically mounted\n",
+    "2. An Arduino or a Circuit Python or MicroPython microcontroller connected to the hardware either directly or through some other hardware like a breadboard to a Laptop.\n",
+    "3. A laptop with Python installed, connected to the Arduino or microcontroller with a USB cable, will read in the sensor data or actuate the motor or relay.\n",
     "4. A wireless network is needed for the Laptop to connect to. PCC’s wireless network is available to all registered students.\n",
-    "5. An account on ThinkSpeak.com (an IoT cloud server) where the sensor data or relay state will be stored"
+    "5. An account on ThinkSpeak.com (an IoT cloud server) where the sensor data or relay state will be stored."
    ]
   },
   {
@@ -155,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure your group's Python and MicroPython or Arduino code is well-commented and sectioned. Ensure the variable names are descriptive and there is enough documentation for another group of students to reuse the code without much trouble. Each Group's submissions for the lab should be done by one team member (only one person per group needs to submit, but they must submit all 4 files). \n",
+    "Make sure your group's Python and microcontroller code is well-commented and sectioned. Ensure the variable names are descriptive and there is enough documentation for another group of students to reuse the code without much trouble. Each Group's submissions for the lab should be done by one team member (only one person per group needs to submit, but they must submit all 4 files). \n",
     "\n",
     "#### Upload these files four files to the D2L Arduino IoT Project uploads folder.\n",
     "\n",
