--- a/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
+++ b/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
@@ -299,7 +299,7 @@
     "It was too wet to play.\n",
     "``` \n",
     "\n",
-    "Complete this this task with indexing, not by writing the the strings from scratch. Hint: Open the file ```cat_in_hat_words.txt``` from the Jupyter notebook file browser. The text file will be shown with line numbers.\n"
+    "Complete this task with indexing, not by writing the the strings from scratch. Hint: Open the file ```cat_in_hat_words.txt``` from the Jupyter notebook file browser. The text file will be shown with line numbers.\n"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
