--- a/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
+++ b/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
@@ -377,13 +377,13 @@
     " \n",
     " * Square brackets ```[ ]``` are used to slice and index Python lists and strings\n",
     " \n",
-    " * When using in slicing, the colon character ```:``` means _thru_ or _by_ or _all_ \n",
-    " \n",
     " * The slicing syntax is ```[start:stop:step]```\n",
     " \n",
     " * The defaults in slicing are ```[start=0 : stop=last : step=1]```\n",
     " \n",
-    " * When a number is left out of a slice, the default is used."
+    " * When a number is left out of a slice, the default is used.\n",
+    " \n",
+    " * If your Jupyter notebook freezes, try Kernel --> Restart & Clear Output. Then run each code cell starting with the first cell at the top of the notebook."
    ]
   },
   {
