--- a/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
+++ b/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
@@ -166,10 +166,9 @@
    "source": [
     "#### Exercises\n",
     "\n",
-    " 1. Print 2.3 billion\n",
+    " 1. Print 2.3 billion as an integer, float and string.\n",
     " 2. Search for the NumPy function for cube root, and print the cube root of ```8```.\n",
-    " 3. Print 0.01 microns (Include the SI unit for microns. Remember your greek symbols from the last section?)\n",
-    " "
+    " 3. Print 0.01 microns and include the SI unit for microns. (Remember your Greek symbols from the last section?)\n"
    ]
   },
   {
@@ -419,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
