edits to Lab 3 sifting weather data

--- a/ENGR114-Labs/Lab03-Sifting_Weather_Data/Lab03-Sifting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab03-Sifting_Weather_Data/Lab03-Sifting_Weather_Data.ipynb
@@ -584,9 +584,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step is to remove all of the ```-9.9999``` values from the ```md``` array. If we find the average of the values in ```md``` now, which corresponds to the average rainfall in February, the value that's returned doesn't make sense. There is no way the rain fall could be negative!\n",
+    "The next step is to remove all of the ```-9.9999``` values from the ```md``` array. If we find the average of the values in ```md``` now, which corresponds to the average rainfall in February, the value that's returned doesn't make sense. There is no way the rainfall could be negative!\n",
     "\n",
-    "The code cell below shows how to find the average of the values in the array ```md```. Note that ```-9.9999``` values are present in the array."
+    "The code cell below shows how to find the average of the values in the array ```md```. Note that ```-9.9999e+02``` values are present in the array."
    ]
   },
   {
@@ -613,11 +613,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To remove the -9.9999 values from the array, use a boolean mask.\n",
+    "To remove the ```-9.9999e+02``` values from the array, use a boolean mask.\n",
     "\n",
-    "The command ```md>-1``` creates a boolean mask. The boolean mask is an array the same size as ```md```, but only contains ```True``` or ```False``` as values. In the mask, all locations where ```md>-1``` are set to ```True```; all other values in the boolean mask are set to ```False``` (We use ```md>-1``` instead of ```md>0``` because we want to keep the ```0``` values, we just want to get rid of the ```-9.9999``` values). \n",
+    "The command ```md>-1``` creates a boolean mask. The boolean mask is an array the same size as ```md```, but only contains ```True``` or ```False``` values. In the boolean mask, all locations where ```md>-1``` are set to ```True```; all other values in the mask are set to ```False``` (We use ```md>-1``` instead of ```md>0``` because we want to keep the ```0``` values, we just want to get rid of the ```-9.9999e+02``` values). \n",
     "\n",
-    "The code cell below produces the boolean mask. Note how the last three elements are ```False```. The ```False``` values are in the same location as the ```-9.9999``` values in ```md```."
+    "The code cell below produces the boolean mask. Note how the last three elements are ```False```. The ```False``` values are in the same location as the ```-9.9999e+02``` values in ```md```."
    ]
   },
   {
@@ -649,7 +649,7 @@
    "source": [
     "Next, use the boolean mask ```md>-1``` to index the array ```md```. All the locations in ```wd``` where the boolean mask is set to ```True``` are pulled out. All the locations in ```wd``` where the boolean mask is ```False``` do not get pulled out. Put the results of the indexing operation back into the variable ```wd``` to be used later.\n",
     "\n",
-    "The code cell below creates the boolean mask, indexes out values from ```wd``` based on the mask, and puts the results back into ```wd```, which as a result does not contain ```-9.9999``` in any location."
+    "The code cell below creates the boolean mask, indexes out values from ```wd``` based on the mask, and puts the results back into ```wd```, which as a result does not contain ```-9.9999e+02``` in any location."
    ]
   },
   {
@@ -702,7 +702,7 @@
     "\n",
     "You may wish to test your script against other month's data.  When you are convinced your results and variable names are correct, set ```m=1``` and restart the Jupyter notebook Kernel and clear all output. Run each cell one last time and ensure the script runs error free.\n",
     "\n",
-    "For your own records, save your ```lab2.ipynb``` file and your ```weather_data.xlsx``` file to the same directory.  You do not need to submit your ```weather_data.xlsx``` file because your instructor has their own copy to test your script."
+    "For your own records, save your ```lab3.ipynb``` file and your ```weather_data.xlsx``` file to the same directory.  You do not need to submit your ```weather_data.xlsx``` file because your instructor has their own copy to test your script."
    ]
   },
   {
