--- a/ENGR114-Labs/Lab03-Sifting_Weather_Data/Lab03-Sifting_Weather_Data.tex
+++ b/ENGR114-Labs/Lab03-Sifting_Weather_Data/Lab03-Sifting_Weather_Data.tex
@@ -445,20 +445,33 @@ The code cell below completes these steps.
     \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}3}]:}      0    1    2   3    4    5   6   7   8    9   {\ldots}  21  22   23   24   25  \textbackslash{}
-        0     0    0  272   0    0    0   0   9  26    1  {\ldots}   1  15  224    0    0   
-        1    61  103    0   2    0    0   0   2   0   68  {\ldots}   0   0    5    0    0   
-        2     2    0   17  27    0   10   0   0  30   25  {\ldots}  26   0    0    9    6   
-        3   260    1    0   0    0    1   3   0   5    0  {\ldots}   0   0    0    0    9   
-        4    47    0    0   0    5  115  49  81   0    0  {\ldots}   0   0    0    0    0   
-        5     0    0   30  42    0    0   0   0   0    0  {\ldots}   0   2    2  240   16   
-        6     0    0    0   0    0    0   0   7   0    0  {\ldots}   0   0    0   10    0   
-        7     0   45    0   0    0    0   0   0   5    0  {\ldots}   0   0  158   62    1   
-        8     0    0    0   0    0    0   0   0   0    0  {\ldots}  37   0    0    0    0   
-        9     0    0    0  14  156    0   0   0   0  110  {\ldots}   0   0    0    0    0   
-        10    1  163    5   0    0    0   0   0   0    0  {\ldots}   0   2    2   10  255   
-        11    0    0    0   0    0   45   0   0   0   15  {\ldots}  34   0    0    0    0   
+{\color{outcolor}Out[{\color{outcolor}3}]:}      0    1    2   3    4    5   6   7   8    9   {\ldots}    21  22   23   24  \textbackslash{}
+        0     0    0  272   0    0    0   0   9  26    1  {\ldots}     1  15  224    0   
+        1    61  103    0   2    0    0   0   2   0   68  {\ldots}     0   0    5    0   
+        2     2    0   17  27    0   10   0   0  30   25  {\ldots}    26   0    0    9   
+        3   260    1    0   0    0    1   3   0   5    0  {\ldots}     0   0    0    0   
+        4    47    0    0   0    5  115  49  81   0    0  {\ldots}     0   0    0    0   
+        5     0    0   30  42    0    0   0   0   0    0  {\ldots}     0   2    2  240   
+        6     0    0    0   0    0    0   0   7   0    0  {\ldots}     0   0    0   10   
+        7     0   45    0   0    0    0   0   0   5    0  {\ldots}     0   0  158   62   
+        8     0    0    0   0    0    0   0   0   0    0  {\ldots}    37   0    0    0   
+        9     0    0    0  14  156    0   0   0   0  110  {\ldots}     0   0    0    0   
+        10    1  163    5   0    0    0   0   0   0    0  {\ldots}     0   2    2   10   
+        11    0    0    0   0    0   45   0   0   0   15  {\ldots}    34   0    0    0   
         
+             25  26   27     28     29     30  
+        0     0   0    0      0     33     33  
+        1     0   0   62 -99999 -99999 -99999  
+        2     6  78    0      5      8      0  
+        3     9  35   13     86      0 -99999  
+        4     0   2    0      0      0      0  
+        5    16  35   14     14      8 -99999  
+        6     0   0    5      0      0      0  
+        7     1   0    0      0      0      0  
+        8     0   6  138     58     10 -99999  
+        9     0   0    0      0      0      1  
+        10  255   2    0      0      0 -99999  
+        11    0   0    0      0      0      0  
         
         [12 rows x 31 columns]
 \end{Verbatim}
@@ -475,7 +488,7 @@ The Jupyter notebook code cell below demonstrates this functionality.
 
 
     Next use Python's \texttt{type()} function to verify the variable
-\texttt{wd} is a NumPy array. Also verify that the NumPy array is 5 by
+\texttt{wd} is a NumPy array. Also verify that the NumPy array is 12 by
 31, which is the same dimensions (how many rows, how many columns) as
 the dataframe \texttt{df} that we previously printed out.
 
@@ -540,7 +553,7 @@ general syntax for indexing a NumPy array is
 
     \begin{Verbatim}[commandchars=\\\{\}]
 {\color{incolor}In [{\color{incolor}7}]:} \PY{n}{m} \PY{o}{=} \PY{l+m+mi}{1}
-        \PY{n}{md} \PY{o}{=} \PY{n}{wd}\PY{p}{[}\PY{l+m+mi}{1}\PY{p}{,}\PY{p}{:}\PY{p}{]}
+        \PY{n}{md} \PY{o}{=} \PY{n}{wd}\PY{p}{[}\PY{n}{m}\PY{p}{,}\PY{p}{:}\PY{p}{]}
         \PY{n+nb}{print}\PY{p}{(}\PY{n}{md}\PY{p}{)}
 \end{Verbatim}
 
@@ -684,7 +697,7 @@ has their own copy to test your script.
 \subsection{Deliverable}\label{deliverable}}
 
 One \texttt{.ipynb}-file with all cells run. The \texttt{.ipynb}-file
-should run without errors. Uploaded the \texttt{.ipynb}-file to D2L by
+should run without errors. Uploaded the .\texttt{.ipynb}-file to D2L by
 the end of the lab period.
 
     \hypertarget{by-d.-kruger-adapted-by-p.-kazarinoff-portland-community-college-2019}{%
