--- a/ENGR114-Labs/Lab06-Image_Filtering/ENGR114-Lab06-Image_Filtering.ipynb
+++ b/ENGR114-Labs/Lab06-Image_Filtering/ENGR114-Lab06-Image_Filtering.ipynb
@@ -124,7 +124,7 @@
     "no\n",
     "```\n",
     "\n",
-    "![Image terrain colormap, no gridlines, no tick labels](images/image1.png)"
+    "![Image terrain colormap, yes gridlines, no tick labels](images/image1.png)"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
